Fixing share block on mobile

--- a/2020theme/sass/04-blocks/_18-share.scss
+++ b/2020theme/sass/04-blocks/_18-share.scss
@@ -30,7 +30,10 @@
 				line-height: 100% !important;
 				&:before{
 					display: block !important;
-					font-size: 2rem !important;	
+					font-size: 1rem !important;	
+					@media (min-width: 900px){
+						font-size: 2rem !important;	
+					}
 				}
 			}
 			&.share-end{
